--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@bodynarf/react.components": "^1.2.4",
     "bootstrap-icons": "^1.8.1",
+    "bulma-checkradio": "^2.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
