--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@bodynarf/react.components": "^1.3.10",
+    "@bodynarf/react.components.form": "^1.0.2",
     "bootstrap-icons": "^1.9.0",
     "bulma-checkradio": "^2.1.3",
     "react": "^18.0.0",
