add sort hook & remove queryParam hook due no use

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,9 @@
 			"@app/static/*": [
 				"src/shared/constants/*"
 			],
+			"@app/hooks": [
+				"src/shared/hooks"
+			],
 			"@app/hooks/*": [
 				"src/shared/hooks/*"
 			],
