--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@bodynarf/react.components": "^1.6.2",
     "@bodynarf/react.components.form": "^1.0.11",
+    "apexcharts": "^3.37.3",
     "bootstrap-icons": "^1.9.0",
     "bulma-checkradio": "^2.1.3",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
